apps/kinetiq/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kinetiq
  namespace: kinetiq-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: kinetiq.scesi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kinetiq
                port:
                  number: 80
  tls:
    - hosts:
        - kinetiq.scesi.dev
      secretName: kinetiq-prod-tls-secret
